apps/autocorp/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autocorp-web-svc
  namespace: autocorp
spec:
  type: ClusterIP
  selector:
    app: autocorp-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: web
